[project]
name = "reputeai"
version = "0.1.0"
description = "FastAPI project"
requires-python = "~=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "SQLAlchemy>=2.0",
    "alembic",
    "psycopg[binary]",
    "pydantic>=2.0",
    "pydantic-settings",
    "redis",
    "celery[redis]",
    "httpx",
    "python-jose[cryptography]",
    "passlib[argon2]",
    "python-multipart",
    "structlog",
    "slowapi",
    "tenacity",
    "openai",
    "langdetect",
    "stripe",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
